--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^8.4.5",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
+    "path": "^0.12.7",
     "razorpay": "^2.9.4"
   }
 }
