--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "path": "^0.12.7",
-    "razorpay": "^2.9.4"
+    "razorpay": "^2.9.4",
+    "vercel": "^39.0.2"
   }
 }
